--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.41.1",
     "bcryptjs": "^3.0.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
